--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -34,33 +34,33 @@
   --z-10: 10;
   --z-100: 100;
 }
+
 .main {
-  width: 100vw;
-  overflow-x: hidden;
+  max-width: 100%;
 }
+
 /* ===== ABOUT US MAIN ===== */
 .about__hero {
-  /* border: 3px solid blue; */
   width: 100vw;
   height: 100vh;
-  /* ? height 100vh - 4.3rem?? */
-  /* ? margin top 4.3rem? */
+  position: relative;
 }
+
 .about__hero-container {
   height: 100%;
   position: relative;
 }
+
 .about__hero-image-warp {
   height: 100vh;
   background: url(../../static/images/about-us-hero.jpg);
   background-size: cover;
   background-position: 48%;
 }
+
 .about__hero-text-wrap {
-  border: 1px solid blue;
   display: flex;
   flex-direction: column;
-
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -73,14 +73,15 @@
     transparent 100%
   );
 }
+
 .about__hero-title {
-  /* border: 1px solid white; */
   margin-top: 4.3rem;
   color: var(--color-white);
   font-size: var(--h1-fs);
   font-weight: var(--fw-medium);
   padding: 1rem;
 }
+
 .about__hero-line {
   border-top: 2px solid var(--color-white);
   width: 20%;
@@ -98,7 +99,6 @@
 }
 
 .about__hero-paragraph {
-  /* border: 1px solid green; */
   padding: 1rem;
   color: var(--color-white);
   font-size: var(--normal-fs);
@@ -108,46 +108,59 @@
 }
 
 /* ===== ABOUT US ASIDE NAVIGATION ===== */
-.about__aside {
-  border: 1px solid blue;
-  /* position: -webkit-sticky;
-  position: sticky;
-  top: 10; */
+.sticky {
+  height: auto;
+  position: relative;
 }
+
+.about__aside {
+  position: -webkit-sticky;
+  position: sticky;
+  width: 100vw;
+  top: 4rem;
+  left: 0;
+  z-index: var(--z-10);
+  background-color: var(--color-white);
+}
+
 .about__aside-navigation {
   border: 3px solid var(--color-black);
   display: flex;
   flex-direction: column;
   width: 100vw;
 }
+
 .about__aside-title-wrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.2rem 1rem;
 }
+
 .about__aside-title {
   width: 100%;
   font-size: var(--h3-fs);
 }
+
 .about__aside-icon {
   font-size: 2rem;
 }
+
 .about__aside-list {
-  border: 1px solid green;
   padding: 0 1rem;
-  /* display: none; */
   height: 0;
+  visibility: hidden;
   opacity: 0;
   transition: 0.3s linear;
-  z-index: -1;
 }
+
 .about__aside-link {
   padding: 0.5rem 0 0.5rem 0.5rem;
   font-size: var(--normal-fs);
   font-weight: var(--fw-regular);
   letter-spacing: 1px;
 }
+
 .about__aside-link a {
   color: var(--color-black);
 }
@@ -156,13 +169,14 @@
 .show__aside-list {
   display: block;
   height: 100%;
+  visibility: visible;
   opacity: 1;
-  z-index: 1;
 }
 
 /* ===== ABOUT US ===== */
 .about__us {
-  padding: 3rem 1rem;
+  scroll-margin-top: 14rem;
+  padding: 2rem 1rem 5rem;
   width: 100%;
 }
 
@@ -184,12 +198,12 @@
   background-size: cover;
   width: 100%;
   height: 13rem;
-  margin-bottom: 2rem;
 }
 
 /* ===== OUR STORY ===== */
 .about__story {
-  margin-bottom: 4rem;
+  scroll-margin-top: 14rem;
+  padding: 2rem 0 5rem;
 }
 
 .about__story-title {
@@ -208,17 +222,20 @@
   width: 100%;
   height: 100%;
 }
+
 .story__slide {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
 }
+
 .story__slide-line {
   border-top: 3px solid black;
   width: 100%;
   margin: 2rem;
 }
+
 .story__slide-circle {
   width: 2rem;
   height: 2rem;
@@ -227,6 +244,7 @@
   position: absolute;
   top: 1rem;
 }
+
 .story__slide-text {
   display: flex;
   flex-direction: column;
@@ -235,15 +253,18 @@
   padding-bottom: 2rem;
   margin-bottom: 4rem;
 }
+
 .story__slide-title {
   font-size: var(--h1-fs);
   margin: 1rem 0;
 }
+
 .story__slide-paragraph {
   text-align: center;
   line-height: 1.3;
   margin: 0 1rem;
 }
+
 .swiper-horizontal .swiper-scrollbar {
   position: absolute;
   top: 86%;
@@ -252,6 +273,7 @@
 .swiper-scrollbar .swiper-scrollbar-drag {
   background-color: var(--color-red);
 }
+
 .swiper .swiper-button-next {
   position: absolute;
   top: 94%;
@@ -263,14 +285,17 @@
   top: 94%;
   left: 80%;
 }
+
 .swiper .swiper-button-next::after {
   font-size: 0.7rem;
   color: var(--color-black);
 }
+
 .swiper .swiper-button-prev::after {
   font-size: 0.7rem;
   color: var(--color-black);
 }
+
 .swiper .swiper-pagination-fraction {
   width: fit-content;
   bottom: 3%;
@@ -280,8 +305,10 @@
 
 /* ===== INVESTORS ===== */
 .about__investors {
-  padding: 1rem;
+  scroll-margin-top: 14rem;
+  padding: 2rem 1rem 5rem;
 }
+
 .about__investors-title {
   font-size: var(--h3-fs);
   padding: 1rem 0;
@@ -292,6 +319,7 @@
   justify-content: space-between;
   margin-bottom: 1.5rem;
 }
+
 .about__invest-image {
   width: 8rem;
   height: 10rem;
@@ -299,29 +327,37 @@
   background-position: center center;
   background-size: cover;
 }
+
 #google {
   background-image: url(../../static/images/gv.png);
   background-color: #2e2e2e;
   background-size: contain;
 }
+
 #steve {
   background-image: url(../../static/images/steve.jpg);
 }
+
 #kevin {
   background-image: url(../../static/images/kevin.jpg);
 }
+
 #josh {
   background-image: url(../../static/images/josh.jpg);
 }
+
 #liam {
   background-image: url(../../static/images/liam.jpg);
 }
+
 #paddy {
   background-image: url(../../static/images/paddy.jpg);
 }
+
 #casey {
   background-image: url(../../static/images/casey.jpg);
 }
+
 .about__invest-content {
   width: 12rem;
   display: flex;
@@ -329,21 +365,26 @@
   justify-content: flex-end;
   line-height: 1.4;
 }
+
 .about__invest-name {
   font-size: var(--normal-fs);
 }
+
 .about__invest-title {
   font-size: var(--small-fs);
 }
+
 /* ===== SUSTAINABILITY ===== */
 .about__sustainability {
-  padding: 4rem 1rem;
+  scroll-margin-top: 14rem;
+  padding: 2rem 1rem 5rem;
 }
 
 .sustain__title {
   font-size: var(--h3-fs);
   padding: 1rem 0;
 }
+
 .sustain__image {
   background-image: url(../../static/images/sustain.jpg);
   background-repeat: no-repeat;
@@ -353,11 +394,13 @@
   height: 15rem;
   margin-bottom: 2rem;
 }
+
 .sustain__content {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
+
 .sustain__paragraph {
   font-size: var(--normal-fs);
   line-height: 1.4;
